SERVER-19649 don't log awaitData queries that exceed slowms while waiting

Closes #1015

Signed-off-by: David Storch <david.storch@10gen.com>